@@ -1,3 +1,10 @@
+2010-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Minor improvements to tests ar*.test.
+	* tests/ar.test: Add trailing `:' command.
+	* tests/ar2.test: Likewise, and make grepping of generated
+	Makefile.in stricter.
+
 2010-08-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix maintainer-check failure.
